--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSZ5Z37VMEGr7A
 
 
 // Replace with your Google Apps Script Web App URL
-const webAppUrl = "YOUR_WEB_APP_URL";
+const webAppUrl = "https://script.google.com/macros/s/AKfycbz-qhPfxoPhzdZzEmHQe1kB26ykEB89S8RyOXVW2jJ9sifl1VMYG0lF6OLUNWELDxBUHg/exec";
 
 
 // Load UPCs from Google Sheet
@@ -99,3 +99,4 @@ html5QrcodeScanner.render(onScanSuccess);
 </script>
 </body>
 </html>
+
