--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+.not-found {
 color: red;
 }
 </style>
@@ -15,11 +16,11 @@ let upcList = [];
 
 
 // Replace with your published Google Sheet CSV link
-const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSZ5Z37VMEGr7AY4KET_a2eFjxzPmVzsPkErvJiFfue_ShDqo0ZFWQzi-Ias7PpnPEsAW-Y_65WsCZX/pub?output=csv";
+const sheetUrl = "https://docs.google.com/spreadsheets/d/XXXXX/pub?output=csv";
 
 
 // Replace with your Google Apps Script Web App URL
-const webAppUrl = "https://script.google.com/macros/s/AKfycbzo6mhvhOM4e9yTcX7Zuj2PWY4lndTeBoOsFmh1_3c2itz_-UJ0-ReCOGYvX0eUAC0mYA/exec";
+const webAppUrl = "YOUR_WEB_APP_URL";
 
 
 // Load UPCs from Google Sheet
@@ -88,4 +89,3 @@ html5QrcodeScanner.render(onScanSuccess);
 </script>
 </body>
 </html>
-
