--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@ let upcList = [];
 
 
 // Replace with your published Google Sheet CSV link
-const sheetUrl = "https://docs.google.com/spreadsheets/d/XXXXX/pub?output=csv";
+const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSZ5Z37VMEGr7AY4KET_a2eFjxzPmVzsPkErvJiFfue_ShDqo0ZFWQzi-Ias7PpnPEsAW-Y_65WsCZX/pub?output=csv";
 
 
 // Replace with your Google Apps Script Web App URL
-const webAppUrl = "YOUR_WEB_APP_URL";
+const webAppUrl = "https://script.google.com/macros/s/AKfycbzo6mhvhOM4e9yTcX7Zuj2PWY4lndTeBoOsFmh1_3c2itz_-UJ0-ReCOGYvX0eUAC0mYA/exec";
 
 
 // Load UPCs from Google Sheet
@@ -85,4 +85,5 @@ html5QrcodeScanner.render(onScanSuccess);
 </script>
 </body>
 </html>
+
 
