--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>UPC Checker</title>
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background: #f9fafb;
+      color: #111;
+      text-align: center;
+    }
+    #reader {
+      width: 300px;
+      margin: 0 auto;
+    }
+    .result {
+      margin-top: 20px;
+      font-size: 1.2em;
+      font-weight: bold;
+    }
+    .found {
+      color: green;
+    }
+    .not-found {
+      color: red;
+    }
+  </style>
+</head>
+<body>
+  <h1>UPC Checker</h1>
+  <p>Scan a barcode to see if it exists in your list.</p>
+  <div id="reader"></div>
+  <div id="result" class="result"></div>
 
   <script>
     let upcList = [];
 
     // Replace with your published Google Sheet CSV link
-    const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSZ5Z37VMEGr7AY4KET_a2eFjxzPmVzsPkErvJiFfue_ShDqo0ZFWQzi-Ias7PpnPEsAW-Y_65WsCZX/pub?output=csv";
+    const sheetUrl = "https://docs.google.com/spreadsheets/d/XXXXX/pub?output=csv";
 
     // Replace with your Google Apps Script Web App URL
-    const webAppUrl = "https://script.google.com/macros/s/AKfycbzo6mhvhOM4e9yTcX7Zuj2PWY4lndTeBoOsFmh1_3c2itz_-UJ0-ReCOGYvX0eUAC0mYA/exec";
+    const webAppUrl = "YOUR_WEB_APP_URL";
 
     // Load UPCs from Google Sheet
     async function loadUPCs() {
