--- a/index.html
+++ b/index.html
@@ -23,18 +23,19 @@
       font-weight: bold;
     }
     .found {
-      color: green;
+      color: red;
     }
     .not-found {
-      color: red;
+      color: green;
     }
   </style>
 </head>
 <body>
   <h1>Toniebox 2 Serial Number Scanner</h1>
   <p>Scan the QR code on the underside of the box to check if it is an defective box. If the result is "found", please defect the box out with a Target team member.</p>
-  <div id="reader"></div>
   <div id="result" class="result"></div>
+  <div id="reader"></div>
+  
 
   <script>
     let upcList = [];
@@ -63,7 +64,7 @@
     function onScanSuccess(decodedText) {
       const resultDiv = document.getElementById("result");
       if (upcList.includes(decodedText)) {
-        resultDiv.textContent = `✅ DEFECTIVE: please defect out of inventory ${decodedText}`;
+        resultDiv.textContent = `❌ DEFECTIVE: please defect out of inventory ${decodedText}`;
         resultDiv.className = "result found";
 
         // Send UPC back to Google Apps Script to mark it as found
@@ -76,7 +77,7 @@
         .catch(err => console.error("Error sending to Google Sheet:", err));
 
       } else {
-        resultDiv.textContent = `❌ NOT DEFECTIVE: please keep in inventory ${decodedText}`;
+        resultDiv.textContent = `✅ NOT DEFECTIVE: please keep in inventory ${decodedText}`;
         resultDiv.className = "result not-found";
       }
     }
@@ -90,4 +91,5 @@
   </script>
 </body>
 </html>
+
 
