--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <h1>Toniebox 2 Serial Number Scanner</h1>
-  <p>Scan the QR code on the underside of the box. If defective, find a Target team member to defect out the box.</p>
+  <p>Scan the QR code on the bottom of the box. If defective, find a Target team member to defect out the box.</p>
   <div id="result" class="result"></div>
   <div id="reader"></div>
   
@@ -91,6 +91,7 @@
   </script>
 </body>
 </html>
+
 
 
 
